Remove quick access section from hero

--- a/index.html
+++ b/index.html
@@ -90,71 +90,39 @@
         <div class="absolute top-1/4 -left-64 w-96 h-96 bg-brand rounded-full mix-blend-screen filter blur-[128px] opacity-20"></div>
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 w-full">
-            <div class="grid grid-cols-1 lg:grid-cols-12 gap-12 items-end">
-                <div class="lg:col-span-7" data-aos="fade-right" data-aos-duration="1000">
-                    <div class="flex items-center space-x-4 mb-6">
-                        <div class="h-[1px] w-12 bg-brand"></div>
-                        <span class="text-brand tracking-[0.2em] uppercase text-xs font-semibold" data-business-category>Салон красоты</span>
-                    </div>
-                    <h1 class="text-5xl md:text-7xl font-serif mb-8 leading-tight text-white">
-                        <span data-business-name>Идеальное тело</span><br>
-                        эстетика и уход
-                    </h1>
-                    <p class="mt-4 text-lg text-gray-300 mb-10 font-light max-w-xl leading-relaxed">
-                        Аппаратные массажи, лазерная эпиляция и солярий в Краснодаре.
-                        Удобная запись, понятный прайс и комфортный сервис.
-                    </p>
+            <div class="max-w-4xl" data-aos="fade-right" data-aos-duration="1000">
+                <div class="flex items-center space-x-4 mb-6">
+                    <div class="h-[1px] w-12 bg-brand"></div>
+                    <span class="text-brand tracking-[0.2em] uppercase text-xs font-semibold" data-business-category>Салон красоты</span>
+                </div>
+                <h1 class="text-5xl md:text-7xl font-serif mb-8 leading-tight text-white">
+                    <span data-business-name>Идеальное тело</span><br>
+                    эстетика и уход
+                </h1>
+                <p class="mt-4 text-lg text-gray-300 mb-10 font-light max-w-xl leading-relaxed">
+                    Аппаратные массажи, лазерная эпиляция и солярий в Краснодаре.
+                    Удобная запись, понятный прайс и комфортный сервис.
+                </p>
 
-                    <div class="flex flex-wrap gap-3 mb-12">
-                        <span class="hero-badge">
-                            <i class="fa-solid fa-star text-brand mr-2"></i>
-                            <span data-business-rating>⭐ 5,0</span>
-                        </span>
-                        <span class="hero-badge">
-                            <i class="fa-solid fa-clock text-brand mr-2"></i>
-                            <span data-business-hours>Открыто с 10:00 до 22:00</span>
-                        </span>
-                    </div>
-
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="bg-brand glow-btn text-dark-900 px-8 py-4 rounded-full font-semibold text-center uppercase tracking-wider text-sm hover:bg-brand-light transition duration-300">
-                            Написать
-                        </a>
-                        <a href="#services" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
-                            Смотреть прайс
-                        </a>
-                    </div>
+                <div class="flex flex-wrap gap-3 mb-12">
+                    <span class="hero-badge">
+                        <i class="fa-solid fa-star text-brand mr-2"></i>
+                        <span data-business-rating>⭐ 5,0</span>
+                    </span>
+                    <span class="hero-badge">
+                        <i class="fa-solid fa-clock text-brand mr-2"></i>
+                        <span data-business-hours>Открыто с 10:00 до 22:00</span>
+                    </span>
                 </div>
 
-                <aside class="lg:col-span-5" data-aos="fade-left" data-aos-duration="1000">
-                    <div class="hero-panel rounded-3xl p-8">
-                        <h2 class="text-2xl font-serif mb-6 text-white">Быстрый доступ</h2>
-                        <div class="space-y-5">
-                            <div class="quick-row">
-                                <i class="fa-solid fa-location-dot text-brand"></i>
-                                <span data-business-address>ул. Ивана Беличенко, 95, корп. 1, Краснодар</span>
-                            </div>
-                            <div class="quick-row">
-                                <i class="fa-solid fa-phone text-brand"></i>
-                                <a data-business-phone-link href="tel:+79649002011"><span data-business-phone>+7 (964) 900-20-11</span></a>
-                            </div>
-                            <div class="quick-row">
-                                <i class="fa-solid fa-clock text-brand"></i>
-                                <span data-business-hours>Открыто с 10:00 до 22:00</span>
-                            </div>
-                        </div>
-                        <div class="mt-8 grid grid-cols-1 sm:grid-cols-2 gap-3">
-                            <a data-business-phone-link href="tel:+79649002011" class="quick-action-btn">
-                                <i class="fa-solid fa-phone"></i>
-                                Позвонить
-                            </a>
-                            <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="quick-action-btn quick-action-secondary">
-                                <i class="fa-brands fa-telegram"></i>
-                                Написать
-                            </a>
-                        </div>
-                    </div>
-                </aside>
+                <div class="flex flex-col sm:flex-row gap-4">
+                    <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="bg-brand glow-btn text-dark-900 px-8 py-4 rounded-full font-semibold text-center uppercase tracking-wider text-sm hover:bg-brand-light transition duration-300">
+                        Написать
+                    </a>
+                    <a href="#services" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
+                        Смотреть прайс
+                    </a>
+                </div>
             </div>
         </div>
     </header>
