--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
             }
         }
     </script>
+    <script>
+        (function () {
+            var theme = 'light';
+            try {
+                var savedTheme = localStorage.getItem('site-theme');
+                if (savedTheme === 'light' || savedTheme === 'dark') {
+                    theme = savedTheme;
+                }
+            } catch (error) {
+                theme = 'light';
+            }
+            document.documentElement.setAttribute('data-theme', theme);
+        })();
+    </script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,6 +77,15 @@
                     </a>
                 </div>
 
+                <div class="theme-toggle hidden md:inline-flex" aria-label="Переключение темы">
+                    <i class="fa-solid fa-sun theme-icon theme-icon-sun" aria-hidden="true"></i>
+                    <label class="theme-switch">
+                        <input id="theme-toggle" type="checkbox" data-theme-toggle aria-label="Переключить тему">
+                        <span class="theme-slider"></span>
+                    </label>
+                    <i class="fa-solid fa-moon theme-icon theme-icon-moon" aria-hidden="true"></i>
+                </div>
+
                 <button id="mobile-menu-toggle" class="md:hidden w-11 h-11 rounded-full border border-gray-600 text-gray-200 hover:border-brand hover:text-brand transition" aria-expanded="false" aria-controls="mobile-menu" aria-label="Открыть меню">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -72,6 +95,15 @@
         <div id="mobile-menu" class="mobile-menu md:hidden" hidden>
             <div class="max-w-7xl mx-auto px-4 pb-6">
                 <div class="mobile-menu-panel rounded-2xl p-6 flex flex-col gap-4">
+                    <div class="theme-toggle theme-toggle-mobile">
+                        <span class="text-sm text-gray-400 uppercase tracking-widest mr-2">Тема</span>
+                        <i class="fa-solid fa-sun theme-icon theme-icon-sun" aria-hidden="true"></i>
+                        <label class="theme-switch">
+                            <input id="theme-toggle-mobile" type="checkbox" data-theme-toggle aria-label="Переключить тему">
+                            <span class="theme-slider"></span>
+                        </label>
+                        <i class="fa-solid fa-moon theme-icon theme-icon-moon" aria-hidden="true"></i>
+                    </div>
                     <a href="#about" class="mobile-nav-link">О салоне</a>
                     <a href="#services" class="mobile-nav-link">Услуги и цены</a>
                     <a href="#contacts" class="mobile-nav-link">Контакты</a>
@@ -275,7 +307,7 @@
                 </div>
 
                 <div class="lg:w-7/12 min-h-[400px] lg:min-h-full">
-                    <iframe title="Карта салона" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://yandex.ru/map-widget/v1/?ll=38.912458%2C45.098003&mode=search&oid=191633108734&ol=biz&z=16" width="100%" height="100%" frameborder="0" allowfullscreen="true" style="position:relative; min-height: 500px; height: 100%; filter: invert(90%) hue-rotate(180deg) contrast(80%);"></iframe>
+                    <iframe class="map-embed" title="Карта салона" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://yandex.ru/map-widget/v1/?ll=38.912458%2C45.098003&mode=search&oid=191633108734&ol=biz&z=16" width="100%" height="100%" frameborder="0" allowfullscreen="true" style="position:relative; min-height: 500px; height: 100%;"></iframe>
                 </div>
             </div>
         </div>
