Add blinking floating theme switch button in quick actions

--- a/index.html
+++ b/index.html
@@ -328,6 +328,9 @@
         <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="floating-btn floating-btn-secondary" aria-label="Написать в Telegram">
             <i class="fa-brands fa-telegram"></i>
         </a>
+        <button type="button" class="floating-btn floating-btn-theme" data-theme-fab aria-label="Включить темную тему">
+            <i class="fa-solid fa-moon"></i>
+        </button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
