--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
 <body class="antialiased font-sans">
     <a href="#services" class="skip-link">Перейти к прайсу</a>
 
-    <div class="promo-banner" role="note" aria-label="Акции">
+    <div class="promo-banner" role="note" aria-label="Акции и спецпредложения">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="promo-banner-inner">
                 <div class="promo-item">
                     <i class="fa-solid fa-wand-magic-sparkles"></i>
-                    <span>ЛАЗЕР ВСЕ ТЕЛО - <strong>4 990 ₽</strong></span>
+                    <span>Спецпредложение: лазерная эпиляция «Все тело» — <strong>4 990 ₽</strong></span>
                 </div>
                 <div class="promo-dot" aria-hidden="true"></div>
                 <div class="promo-item">
                     <i class="fa-solid fa-spa"></i>
-                    <span>МАССАЖ ОТ <strong>1 500 ₽</strong> - 1 ЧАС</span>
+                    <span>Аппаратный массаж 60 минут — от <strong>1 500 ₽</strong></span>
                 </div>
             </div>
         </div>
     </div>
 
-    <nav class="glass-nav fixed w-full z-50 transition-all duration-300" aria-label="Главное меню">
+    <nav class="glass-nav w-full transition-all duration-300" aria-label="Главное меню">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-24">
                 <a href="#" class="flex-shrink-0 flex items-center" aria-label="На главную">
@@ -134,7 +134,7 @@
         </div>
     </nav>
 
-    <header class="hero-bg min-h-screen flex items-center pt-44 md:pt-40 relative overflow-hidden">
+    <header class="hero-bg min-h-screen flex items-center pt-16 md:pt-20 relative overflow-hidden">
         <div class="absolute top-1/4 -left-64 w-96 h-96 bg-brand rounded-full mix-blend-screen filter blur-[128px] opacity-20"></div>
 
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10 w-full">
