Improve persistent price banner and optimize theme toggle responsiveness

--- a/index.html
+++ b/index.html
@@ -50,23 +50,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body class="antialiased font-sans">
     <a href="#services" class="skip-link">Перейти к прайсу</a>
 
-    <div class="promo-banner" role="note" aria-label="Акции и спецпредложения">
+    <div class="promo-banner" role="note" aria-label="Постоянные цены">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="promo-banner-inner">
-                <div class="promo-item">
-                    <i class="fa-solid fa-wand-magic-sparkles"></i>
-                    <span>Спецпредложение: лазерная эпиляция «Все тело» — <strong>4 990 ₽</strong></span>
-                </div>
-                <div class="promo-dot" aria-hidden="true"></div>
-                <div class="promo-item">
-                    <i class="fa-solid fa-spa"></i>
-                    <span>Аппаратный массаж 60 минут — от <strong>1 500 ₽</strong></span>
+                <p class="promo-title">
+                    <i class="fa-solid fa-circle-check"></i>
+                    Постоянные цены салона
+                </p>
+                <div class="promo-grid">
+                    <div class="promo-card">
+                        <span class="promo-label">Лазерная эпиляция «Все тело»</span>
+                        <strong class="promo-value">4 990 ₽</strong>
+                    </div>
+                    <div class="promo-card">
+                        <span class="promo-label">Аппаратный массаж 60 минут</span>
+                        <strong class="promo-value">от 1 500 ₽</strong>
+                    </div>
                 </div>
             </div>
         </div>
@@ -349,7 +353,6 @@
         </button>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/data.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
