--- a/index.html
+++ b/index.html
@@ -31,20 +31,6 @@
             }
         }
     </script>
-    <script>
-        (function () {
-            var theme = 'light';
-            try {
-                var savedTheme = localStorage.getItem('site-theme');
-                if (savedTheme === 'light' || savedTheme === 'dark') {
-                    theme = savedTheme;
-                }
-            } catch (error) {
-                theme = 'light';
-            }
-            document.documentElement.setAttribute('data-theme', theme);
-        })();
-    </script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,17 +45,20 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="promo-banner-inner">
                 <p class="promo-title">
-                    <i class="fa-solid fa-circle-check"></i>
-                    Постоянные цены салона
+                    <i class="fa-solid fa-sparkles"></i>
+                    Актуальные цены каждый день
                 </p>
+                <p class="promo-subtitle">Лазерная эпиляция и аппаратные массажи по понятному прайсу</p>
                 <div class="promo-grid">
                     <div class="promo-card">
-                        <span class="promo-label">Лазерная эпиляция «Все тело»</span>
+                        <span class="promo-label"><i class="fa-solid fa-wand-magic-sparkles"></i>Лазер «Все тело»</span>
                         <strong class="promo-value">4 990 ₽</strong>
+                        <span class="promo-note">Полный комплекс</span>
                     </div>
                     <div class="promo-card">
-                        <span class="promo-label">Аппаратный массаж 60 минут</span>
+                        <span class="promo-label"><i class="fa-solid fa-spa"></i>Массаж 60 минут</span>
                         <strong class="promo-value">от 1 500 ₽</strong>
+                        <span class="promo-note">1 час процедуры</span>
                     </div>
                 </div>
             </div>
@@ -97,15 +86,6 @@
                     </a>
                 </div>
 
-                <div class="theme-toggle hidden md:inline-flex" aria-label="Переключение темы">
-                    <i class="fa-solid fa-sun theme-icon theme-icon-sun" aria-hidden="true"></i>
-                    <label class="theme-switch">
-                        <input id="theme-toggle" type="checkbox" data-theme-toggle aria-label="Переключить тему">
-                        <span class="theme-slider"></span>
-                    </label>
-                    <i class="fa-solid fa-moon theme-icon theme-icon-moon" aria-hidden="true"></i>
-                </div>
-
                 <button id="mobile-menu-toggle" class="md:hidden w-11 h-11 rounded-full border border-gray-600 text-gray-200 hover:border-brand hover:text-brand transition" aria-expanded="false" aria-controls="mobile-menu" aria-label="Открыть меню">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -115,15 +95,6 @@
         <div id="mobile-menu" class="mobile-menu md:hidden" hidden>
             <div class="max-w-7xl mx-auto px-4 pb-6">
                 <div class="mobile-menu-panel rounded-2xl p-6 flex flex-col gap-4">
-                    <div class="theme-toggle theme-toggle-mobile">
-                        <span class="text-sm text-gray-400 uppercase tracking-widest mr-2">Тема</span>
-                        <i class="fa-solid fa-sun theme-icon theme-icon-sun" aria-hidden="true"></i>
-                        <label class="theme-switch">
-                            <input id="theme-toggle-mobile" type="checkbox" data-theme-toggle aria-label="Переключить тему">
-                            <span class="theme-slider"></span>
-                        </label>
-                        <i class="fa-solid fa-moon theme-icon theme-icon-moon" aria-hidden="true"></i>
-                    </div>
                     <a href="#about" class="mobile-nav-link">О салоне</a>
                     <a href="#services" class="mobile-nav-link">Услуги и цены</a>
                     <a href="#contacts" class="mobile-nav-link">Контакты</a>
@@ -348,9 +319,6 @@
         <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="floating-btn floating-btn-secondary" aria-label="Написать в Telegram">
             <i class="fa-brands fa-telegram"></i>
         </a>
-        <button type="button" class="floating-btn floating-btn-theme" data-theme-fab aria-label="Включить темную тему">
-            <i class="fa-solid fa-moon"></i>
-        </button>
     </div>
 
     <script src="assets/js/data.js"></script>
