Move promo block into hero and remove mobile menu toggle

--- a/index.html
+++ b/index.html
@@ -41,30 +41,6 @@
 <body class="antialiased font-sans">
     <a href="#services" class="skip-link">Перейти к прайсу</a>
 
-    <div class="promo-banner" role="note" aria-label="Постоянные цены">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="promo-banner-inner">
-                <p class="promo-title">
-                    <i class="fa-solid fa-sparkles"></i>
-                    Актуальные цены каждый день
-                </p>
-                <p class="promo-subtitle">Лазерная эпиляция и аппаратные массажи по понятному прайсу</p>
-                <div class="promo-grid">
-                    <div class="promo-card">
-                        <span class="promo-label"><i class="fa-solid fa-wand-magic-sparkles"></i>Лазер «Все тело»</span>
-                        <strong class="promo-value">4 990 ₽</strong>
-                        <span class="promo-note">Полный комплекс</span>
-                    </div>
-                    <div class="promo-card">
-                        <span class="promo-label"><i class="fa-solid fa-spa"></i>Массаж 60 минут</span>
-                        <strong class="promo-value">от 1 500 ₽</strong>
-                        <span class="promo-note">1 час процедуры</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <nav class="glass-nav w-full transition-all duration-300" aria-label="Главное меню">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-24">
@@ -83,26 +59,6 @@
                     </a>
                     <a data-business-phone-link href="tel:+79649002011" class="font-medium text-lg text-white border border-brand px-6 py-2 rounded-full hover:bg-brand hover:text-dark-900 transition duration-300">
                         <span data-business-phone>+7 (964) 900-20-11</span>
-                    </a>
-                </div>
-
-                <button id="mobile-menu-toggle" class="md:hidden w-11 h-11 rounded-full border border-gray-600 text-gray-200 hover:border-brand hover:text-brand transition" aria-expanded="false" aria-controls="mobile-menu" aria-label="Открыть меню">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
-            </div>
-        </div>
-
-        <div id="mobile-menu" class="mobile-menu md:hidden" hidden>
-            <div class="max-w-7xl mx-auto px-4 pb-6">
-                <div class="mobile-menu-panel rounded-2xl p-6 flex flex-col gap-4">
-                    <a href="#about" class="mobile-nav-link">О салоне</a>
-                    <a href="#services" class="mobile-nav-link">Услуги и цены</a>
-                    <a href="#contacts" class="mobile-nav-link">Контакты</a>
-                    <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="mobile-nav-link">
-                        <i class="fa-brands fa-telegram mr-2"></i>Написать
-                    </a>
-                    <a data-business-phone-link href="tel:+79649002011" class="mobile-call-btn">
-                        <i class="fa-solid fa-phone mr-2"></i><span data-business-phone>+7 (964) 900-20-11</span>
                     </a>
                 </div>
             </div>
@@ -145,6 +101,28 @@
                     <a href="#services" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
                         Смотреть прайс
                     </a>
+                </div>
+
+                <div class="hero-promo-wrap mt-12" role="note" aria-label="Постоянные цены">
+                    <div class="promo-banner-inner">
+                        <p class="promo-title">
+                            <i class="fa-solid fa-sparkles"></i>
+                            Актуальные цены каждый день
+                        </p>
+                        <p class="promo-subtitle">Лазерная эпиляция и аппаратные массажи по понятному прайсу</p>
+                        <div class="promo-grid">
+                            <div class="promo-card">
+                                <span class="promo-label"><i class="fa-solid fa-wand-magic-sparkles"></i>Лазер «Все тело»</span>
+                                <strong class="promo-value">4 990 ₽</strong>
+                                <span class="promo-note">Полный комплекс</span>
+                            </div>
+                            <div class="promo-card">
+                                <span class="promo-label"><i class="fa-solid fa-spa"></i>Массаж 60 минут</span>
+                                <strong class="promo-value">от 1 500 ₽</strong>
+                                <span class="promo-note">1 час процедуры</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
