Move hero promo banner above CTA buttons

--- a/index.html
+++ b/index.html
@@ -94,16 +94,7 @@
                     </span>
                 </div>
 
-                <div class="flex flex-col sm:flex-row gap-4">
-                    <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="bg-brand glow-btn text-dark-900 px-8 py-4 rounded-full font-semibold text-center uppercase tracking-wider text-sm hover:bg-brand-light transition duration-300">
-                        Написать
-                    </a>
-                    <a href="#services" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
-                        Смотреть прайс
-                    </a>
-                </div>
-
-                <div class="hero-promo-wrap mt-12" role="note" aria-label="Постоянные цены">
+                <div class="hero-promo-wrap mb-8" role="note" aria-label="Постоянные цены">
                     <div class="promo-banner-inner">
                         <p class="promo-title">
                             <i class="fa-solid fa-sparkles"></i>
@@ -118,11 +109,20 @@
                             </div>
                             <div class="promo-card">
                                 <span class="promo-label"><i class="fa-solid fa-spa"></i>Массаж 60 минут</span>
-                                <strong class="promo-value">от 1 500 ₽</strong>
+                                <strong class="promo-value">1 500 ₽</strong>
                                 <span class="promo-note">1 час процедуры</span>
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="flex flex-col sm:flex-row gap-4">
+                    <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="bg-brand glow-btn text-dark-900 px-8 py-4 rounded-full font-semibold text-center uppercase tracking-wider text-sm hover:bg-brand-light transition duration-300">
+                        Написать
+                    </a>
+                    <a href="#services" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
+                        Смотреть прайс
+                    </a>
                 </div>
             </div>
         </div>
