Replace category with studio positioning

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Идеальное тело | Салон красоты в Краснодаре</title>
-    <meta name="description" content="Идеальное тело — салон красоты в Краснодаре: аппаратные массажи, лазерная эпиляция, солярий. Актуальные цены и запись по телефону.">
+    <title>Идеальное тело | Студия коррекции фигуры в Краснодаре</title>
+    <meta name="description" content="Идеальное тело — студия коррекции фигуры в Краснодаре: аппаратные массажи, лазерная эпиляция, солярий. Актуальные цены и запись по телефону.">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -72,7 +72,7 @@
             <div class="max-w-4xl" data-aos="fade-right" data-aos-duration="1000">
                 <div class="flex items-center space-x-4 mb-6">
                     <div class="h-[1px] w-12 bg-brand"></div>
-                    <span class="text-brand tracking-[0.2em] uppercase text-xs font-semibold" data-business-category>Салон красоты</span>
+                    <span class="text-brand tracking-[0.2em] uppercase text-xs font-semibold" data-business-category>Студия коррекции фигуры</span>
                 </div>
                 <h1 class="text-5xl md:text-7xl font-serif mb-8 leading-tight text-white">
                     <span data-business-name>Идеальное тело</span><br>
@@ -285,7 +285,7 @@
     <footer class="bg-black py-12 border-t border-gray-800 text-center relative overflow-hidden">
         <div class="max-w-7xl mx-auto px-4 relative z-10">
             <h3 class="font-serif text-3xl mb-4 text-white" data-business-name>Идеальное тело</h3>
-            <p class="text-gray-500 text-sm mb-8 font-light tracking-wide" data-business-category>Салон красоты</p>
+            <p class="text-gray-500 text-sm mb-8 font-light tracking-wide" data-business-category>Студия коррекции фигуры</p>
             <p class="text-gray-600 text-xs tracking-widest uppercase">© 2026 <span data-business-name>Идеальное тело</span>. Все права защищены.</p>
         </div>
     </footer>
