--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Идеальное тело | Студия коррекции фигуры в Краснодаре</title>
     <meta name="description" content="Идеальное тело — студия коррекции фигуры в Краснодаре: аппаратные массажи, лазерная эпиляция, солярий. Актуальные цены и запись по телефону.">
+    <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
+    <link rel="shortcut icon" href="assets/icons/favicon.svg">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
