Добавить раздел с описанием процедур

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <div class="hidden md:flex space-x-10 items-center">
                     <a href="#about" class="text-sm uppercase tracking-widest text-gray-300 hover:text-brand transition duration-300">О салоне</a>
                     <a href="#services" class="text-sm uppercase tracking-widest text-gray-300 hover:text-brand transition duration-300">Услуги и цены</a>
+                    <a href="#procedures" class="text-sm uppercase tracking-widest text-gray-300 hover:text-brand transition duration-300">Процедуры</a>
                     <a href="#contacts" class="text-sm uppercase tracking-widest text-gray-300 hover:text-brand transition duration-300">Контакты</a>
                     <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="text-sm uppercase tracking-widest text-gray-200 hover:text-brand transition duration-300">
                         Написать
@@ -209,6 +210,18 @@
                 <p class="text-white text-xl font-medium mb-2">Ничего не найдено</p>
                 <p class="text-gray-400">Выберите другую категорию.</p>
             </div>
+        </div>
+    </section>
+
+    <section id="procedures" class="py-24 bg-dark-800 relative">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 relative z-10">
+            <div class="text-center mb-14" data-aos="fade-up">
+                <h2 class="text-4xl md:text-5xl font-serif mb-4">О процедурах</h2>
+                <div class="w-24 h-[1px] bg-brand mx-auto mb-6"></div>
+                <p class="text-gray-400 font-light tracking-wide uppercase text-sm">Нажмите на карточку, чтобы увидеть детали</p>
+            </div>
+
+            <div id="procedures-grid" class="grid grid-cols-1 md:grid-cols-2 gap-6"></div>
         </div>
     </section>
 
