Добавить кнопки навигации по процедурам в hero

--- a/index.html
+++ b/index.html
@@ -119,12 +119,15 @@
                     </div>
                 </div>
 
-                <div class="flex flex-col sm:flex-row gap-4">
+                <div class="flex flex-col sm:flex-row sm:flex-wrap gap-4">
                     <a data-business-telegram-link href="https://t.me/ivleva_lazer" target="_blank" rel="noopener" class="bg-brand glow-btn text-dark-900 px-8 py-4 rounded-full font-semibold text-center uppercase tracking-wider text-sm hover:bg-brand-light transition duration-300">
                         Написать
                     </a>
                     <a href="#services" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
-                        Смотреть прайс
+                        Обо всех процедурах
+                    </a>
+                    <a href="#procedures" class="bg-transparent text-white px-8 py-4 rounded-full font-medium text-center border border-gray-600 hover:border-brand hover:text-brand transition duration-300">
+                        Описание процедур
                     </a>
                 </div>
             </div>
