Рефакторинг фронтенда для стабильного рендера и плавной загрузки

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Идеальное тело — студия коррекции фигуры в Краснодаре: аппаратные массажи, лазерная эпиляция, солярий. Актуальные цены и запись по телефону.">
     <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
     <link rel="shortcut icon" href="assets/icons/favicon.svg">
+    <link rel="preconnect" href="https://cdn.tailwindcss.com">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
+    <link rel="preload" as="image" href="https://images.unsplash.com/photo-1600334089648-b0d9d3028eb2?auto=format&fit=crop&q=80&w=2000">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
