--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Идеальное тело | Студия коррекции фигуры в Краснодаре</title>
     <meta name="description" content="Идеальное тело — студия коррекции фигуры в Краснодаре: аппаратные массажи, лазерная эпиляция, солярий. Актуальные цены и запись по телефону.">
-    <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
-    <link rel="shortcut icon" href="assets/icons/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg?v=20260224-1">
+    <link rel="shortcut icon" href="assets/icons/favicon.svg?v=20260224-1">
     <link rel="preconnect" href="https://cdn.tailwindcss.com">
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="preconnect" href="https://images.unsplash.com" crossorigin>
@@ -42,7 +42,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css?v=20260224-1">
 </head>
 <body class="antialiased font-sans">
     <a href="#services" class="skip-link">Перейти к прайсу</a>
@@ -321,7 +321,7 @@
         </a>
     </div>
 
-    <script src="assets/js/data.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/data.js?v=20260224-1"></script>
+    <script src="assets/js/main.js?v=20260224-1"></script>
 </body>
 </html>
