--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
 
     <section id="contacts" class="py-24 bg-dark-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="glass-card rounded-3xl overflow-hidden flex flex-col lg:flex-row shadow-2xl">
-                <div class="p-10 lg:p-16 lg:w-5/12 flex flex-col justify-center relative">
+            <div class="glass-card rounded-3xl overflow-hidden shadow-2xl">
+                <div class="p-10 lg:p-16 max-w-4xl mx-auto flex flex-col justify-center relative">
                     <div class="absolute top-0 right-0 w-32 h-32 bg-brand rounded-full filter blur-[80px] opacity-10"></div>
 
                     <h2 class="text-4xl font-serif mb-10 text-white">Контакты</h2>
@@ -293,10 +293,6 @@
                             Маршрут
                         </a>
                     </div>
-                </div>
-
-                <div class="lg:w-7/12 min-h-[400px] lg:min-h-full">
-                    <iframe class="map-embed" title="Карта салона" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://yandex.ru/map-widget/v1/?ll=38.912458%2C45.098003&mode=search&oid=191633108734&ol=biz&z=16" width="100%" height="100%" frameborder="0" allowfullscreen="true" style="position:relative; min-height: 500px; height: 100%;"></iframe>
                 </div>
             </div>
         </div>
